--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.1.1",
     "pinia": "^2.1.7",
+    "primevue": "^3.45.0",
     "sass": "^1.69.5",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
